--- a/Neil_Rathi/ramen.css
+++ b/Neil_Rathi/ramen.css
@@ -1,8 +1,14 @@
 body
-{background: #667db6;  /* fallback for old browsers */
-background: -webkit-linear-gradient(to right, #667db6, #0082c8, #0082c8, #667db6);  /* Chrome 10-25, Safari 5.1-6 */
-background: linear-gradient(to right, #667db6, #0082c8, #0082c8, #667db6); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+{/*background: #667db6*/;  /* fallback for old browsers */
+/*background: -webkit-linear-gradient(to right, #667db6, #0082c8, #0082c8, #667db6); */ /* Chrome 10-25, Safari 5.1-6 */
+/*background: linear-gradient(to right, #667db6, #0082c8, #0082c8, #667db6);*/ /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 font-family: 'Gotu', sans-serif;
+ background-image: url("https://png.pngtree.com/thumb_back/fh260/back_our/20190620/ourmid/pngtree-catering-western-beef-cuisine-image_170055.jpg"); 
+    min-height: 500px;  
+    background-attachment: fixed; 
+    background-position: center; 
+    background-repeat: no-repeat; 
+    background-size: cover
 
 }
 
@@ -10,21 +16,32 @@ font-family: 'Gotu', sans-serif;
 #container
 {
 	width: 800px;
-	
-	background-color: #c4c4c4;
+	opacity:1;
+	/*background-color: #c4c4c4;*/
 	margin:0 auto;
 }
 h1
 {
 	text-align: center;
 	font-family: 'Marck Script', cursive;
+	color: white;
+	font-size: 50px;
 }
 .rest
 {
 	padding-left: 4px;
-	background-color: #c4c4c4;
+	background-color: rgba(196, 196, 196, 0.8);
+
+
 	border-bottom: 2px solid black;
+	/*opacity:0.5;*/
+	border-radius:10px;
 }
+.rest:hover
+{
+	background-color: rgba(196, 196, 196, 1);
+}
+
 .brand
 {
 	color: #0a46a1;
@@ -58,7 +75,8 @@ ul {
   padding: 0;
    background-color: black;
     position: -webkit-sticky; /* Safari */
-  position: sticky
+  position: sticky;
+  border-radius:7px;
 }
 li {
   display: inline;
@@ -102,6 +120,7 @@ input:focus
 {
 	color: white;
 	size:5px;
+	padding-left: 3px;
 }
 .fa-home:hover
 {
