--- a/Neil_Rathi/ramen.css
+++ b/Neil_Rathi/ramen.css
@@ -2,17 +2,14 @@ body
 {/*background: #667db6*/;  /* fallback for old browsers */
 /*background: -webkit-linear-gradient(to right, #667db6, #0082c8, #0082c8, #667db6); */ /* Chrome 10-25, Safari 5.1-6 */
 /*background: linear-gradient(to right, #667db6, #0082c8, #0082c8, #667db6);*/ /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-font-family: 'Gotu', sans-serif;
- background-image: url("https://png.pngtree.com/thumb_back/fh260/back_our/20190620/ourmid/pngtree-catering-western-beef-cuisine-image_170055.jpg"); 
-    min-height: 500px;  
+ font-family: 'Gotu', sans-serif;
+ background-image : url("https://eatforum.org/content/uploads/2019/02/XPJ1KSHQ-1200x675.jpg"); 
+ 	min-height: 500px;
     background-attachment: fixed; 
-    background-position: center; 
+    background-position: center center; 
     background-repeat: no-repeat; 
-    background-size: cover
-
-}
-
-
+	background-size: cover;
+	}
 #container
 {
 	width: 800px;
@@ -24,14 +21,15 @@ h1
 {
 	text-align: center;
 	font-family: 'Marck Script', cursive;
-	color: white;
+	color:white;
 	font-size: 50px;
 }
 .rest
 {
 	padding-left: 4px;
-	background-color: rgba(196, 196, 196, 0.8);
-
+	background-color: rgba(211, 210, 210, 0.8);
+	border:1px solid black;
+	margin-bottom: 5px;
 
 	border-bottom: 2px solid black;
 	/*opacity:0.5;*/
@@ -39,14 +37,14 @@ h1
 }
 .rest:hover
 {
-	background-color: rgba(196, 196, 196, 1);
+	background-color: rgba(211, 210, 210, 1);
 }
 
 .brand
 {
 	color: #0a46a1;
 	padding: 2px;
-	font-weight: 700;
+	font-weight: bold;
 }
 .brand:hover
 {
@@ -63,20 +61,20 @@ h1
 }
 .topten
 {
-	color: steelblue;
+	color: #06235c;
 }
 .tags
 {
-	color:#0a46a1 ;
+	color:#06235c ;
+	
 }
 ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
-   background-color: black;
-    position: -webkit-sticky; /* Safari */
-  position: sticky;
-  border-radius:7px;
+  background-color: black;
+  border-radius:10px;
+  margin-bottom: 10px;
 }
 li {
   display: inline;
@@ -90,8 +88,6 @@ input
 	padding: 13px 13px 14px 18px
 	box-sizing: border-box;
 	color:steelblue;
-
-
 }
 input:focus
 {
@@ -120,7 +116,7 @@ input:focus
 {
 	color: white;
 	size:5px;
-	padding-left: 3px;
+	text-align: center;
 }
 .fa-home:hover
 {
@@ -135,3 +131,50 @@ input:focus
 {
 	display: none;
 }
+.disp
+{
+	display: none;
+}
+@media(max-width: 825px){
+	body
+	{
+	background-image : url("https://eatforum.org/content/uploads/2019/02/XPJ1KSHQ-1200x675.jpg"); 
+    /* min-height: 500px;   */
+ 
+    background-position: center center; 
+    background-repeat: no-repeat; 
+	background-size: cover;
+	}
+	#container
+	{
+		width: 80%;
+	}
+	li
+	{
+		margin: 1px;
+		display: block;
+	
+	}
+	ul
+	{
+		margin-bottom: 1px;
+		background-color: inherit;
+	
+	}
+	select
+	{
+		width: 100%;
+	}
+	.dropbtn
+	{
+		margin-top: 5px;
+		border-radius: 10px;
+	}
+	input 
+	{
+		width: 95%;
+		padding: 2px;
+		border: 1px solid black;
+		align-self: center;
+
+	}
