--- a/Shakti_Balaji/style.css
+++ b/Shakti_Balaji/style.css
@@ -23,7 +23,7 @@ ul{
 
 li{
     margin-left: 0;
-    display: inline;
+    display: inline-block;
 }
 
 .show{
@@ -36,7 +36,7 @@ li{
 }
 
 .sho:hover{
-    opacity:1.2;
+    opacity:1.3;
 }
 
 input{
@@ -54,11 +54,15 @@ input{
 }
 
 .dropdown{
-    width: 110px;
-    background-color: darkslategrey;
+    width: 110.13px;
+    background-color: darkslategray;
     color: white;
-    border: 0;
-    height: 22px;
+    border: 2px gray inset;
+    height: 23px;
+}
+
+.dropdown:hover{
+    background-color: gray;
 }
 
 ::placeholder{
