--- a/Shouryan_Sharma/top ramen - Copy/style.css
+++ b/Shouryan_Sharma/top ramen - Copy/style.css
@@ -16,6 +16,7 @@ button:hover{
 }
 body{
 	margin: 0;
+	font-family: Arial, Helvetica, sans-serif;
 }
 .navbar{
 	display: flex;
@@ -142,4 +143,7 @@ p {
 	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 	box-shadow: burlywood;
 	border-radius: 20px;
+}
+.text {
+	padding-left: 10px;
 }
