Searching by city name completed

--- a/Poritish_Bardhan/WeatherApp/app/src/main/res/layout/activity_main7.xml
+++ b/Poritish_Bardhan/WeatherApp/app/src/main/res/layout/activity_main7.xml
@@ -4,68 +4,57 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity2">
+    tools:context=".MainActivity7">
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/button5"
         android:layout_width="231dp"
         android:layout_height="46dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="24dp"
         android:text="@string/Button_name"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText2" />
+        app:layout_constraintTop_toBottomOf="@+id/editText3" />
+
 
     <EditText
-        android:id="@+id/editText"
+        android:id="@+id/editText3"
         android:layout_width="181dp"
         android:layout_height="40dp"
         android:layout_marginTop="32dp"
+        android:layout_marginBottom="24dp"
         android:ems="10"
+        android:hint="@string/city_message"
         android:inputType="text"
-        android:text="@string/Lat_message"
-        app:layout_constraintBottom_toTopOf="@+id/editText2"
+        app:layout_constraintBottom_toTopOf="@+id/button5"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <EditText
-        android:id="@+id/editText2"
-        android:layout_width="181dp"
-        android:layout_height="40dp"
-        android:layout_marginBottom="16dp"
-        android:ems="10"
-        android:inputType="text"
-        android:text="@string/Lon_message"
-        app:layout_constraintBottom_toTopOf="@+id/button"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText" />
-
     <TextView
-        android:id="@+id/textViewco1"
+        android:id="@+id/textViewco3"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:layout_marginTop="8dp"
         android:text="Country: "
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button" />
+        app:layout_constraintTop_toBottomOf="@+id/button5" />
 
     <TextView
-        android:id="@+id/textViewla1"
+        android:id="@+id/textViewla3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
         android:text="Latitude: "
-        app:layout_constraintEnd_toStartOf="@+id/textViewlo1"
+        app:layout_constraintEnd_toStartOf="@+id/textViewlo3"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textViewco1" />
+        app:layout_constraintTop_toBottomOf="@+id/textViewco3" />
 
     <TextView
-        android:id="@+id/textViewlo1"
+        android:id="@+id/textViewlo3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -73,22 +62,22 @@
         android:layout_marginTop="8dp"
         android:text="Longitude: "
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textViewla1"
-        app:layout_constraintTop_toBottomOf="@+id/textViewco1" />
+        app:layout_constraintStart_toEndOf="@+id/textViewla3"
+        app:layout_constraintTop_toBottomOf="@+id/textViewco3" />
 
     <ImageView
-        android:id="@+id/imageView3"
+        android:id="@+id/imageView14"
         android:layout_width="82dp"
         android:layout_height="74dp"
         android:layout_marginStart="24dp"
         android:layout_marginLeft="24dp"
         android:layout_marginTop="16dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textViewla1"
+        app:layout_constraintTop_toBottomOf="@+id/textViewla3"
         app:srcCompat="@drawable/sun" />
 
     <TextView
-        android:id="@+id/textViewsr1"
+        android:id="@+id/textViewsr3"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -98,11 +87,11 @@
         android:layout_marginRight="8dp"
         android:text="Sunrise at: "
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/imageView3"
-        app:layout_constraintTop_toBottomOf="@+id/textViewlo1" />
+        app:layout_constraintStart_toEndOf="@+id/imageView14"
+        app:layout_constraintTop_toBottomOf="@+id/textViewlo3" />
 
     <TextView
-        android:id="@+id/textViewss1"
+        android:id="@+id/textViewss3"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -112,22 +101,22 @@
         android:layout_marginRight="8dp"
         android:text="Sunset at: "
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/imageView3"
-        app:layout_constraintTop_toBottomOf="@+id/textViewsr1" />
+        app:layout_constraintStart_toEndOf="@+id/imageView14"
+        app:layout_constraintTop_toBottomOf="@+id/textViewsr3" />
 
     <ImageView
-        android:id="@+id/imageView9"
+        android:id="@+id/imageView15"
         android:layout_width="67dp"
         android:layout_height="73dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="24dp"
         android:layout_marginRight="24dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView3"
+        app:layout_constraintTop_toBottomOf="@+id/imageView14"
         app:srcCompat="@drawable/thermometer" />
 
     <TextView
-        android:id="@+id/textViewct1"
+        android:id="@+id/textViewct3"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -138,32 +127,32 @@
         android:text="Current Temperature: "
         app:layout_constraintEnd_toStartOf="@+id/imageView9"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView3" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView14" />
 
     <ImageView
-        android:id="@+id/imageView10"
+        android:id="@+id/imageView16"
         android:layout_width="78dp"
         android:layout_height="98dp"
         android:layout_marginStart="24dp"
         android:layout_marginLeft="24dp"
         android:layout_marginTop="16dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView9"
+        app:layout_constraintTop_toBottomOf="@+id/imageView15"
         app:srcCompat="@drawable/humidity1" />
 
     <ImageView
-        android:id="@+id/imageView11"
+        android:id="@+id/imageView17"
         android:layout_width="87dp"
         android:layout_height="95dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="24dp"
         android:layout_marginRight="24dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView9"
+        app:layout_constraintTop_toBottomOf="@+id/imageView15"
         app:srcCompat="@drawable/pressure" />
 
     <TextView
-        android:id="@+id/textViewh1"
+        android:id="@+id/textViewh3"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -172,12 +161,12 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:text="Humidity: "
-        app:layout_constraintEnd_toStartOf="@+id/imageView11"
-        app:layout_constraintStart_toEndOf="@+id/imageView10"
-        app:layout_constraintTop_toBottomOf="@+id/imageView9" />
+        app:layout_constraintEnd_toStartOf="@+id/imageView17"
+        app:layout_constraintStart_toEndOf="@+id/imageView16"
+        app:layout_constraintTop_toBottomOf="@+id/imageView15" />
 
     <TextView
-        android:id="@+id/textViewp1"
+        android:id="@+id/textViewp3"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -186,34 +175,34 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:text="Pressure: "
-        app:layout_constraintEnd_toStartOf="@+id/imageView11"
-        app:layout_constraintStart_toEndOf="@+id/imageView10"
-        app:layout_constraintTop_toBottomOf="@+id/textViewh1" />
+        app:layout_constraintEnd_toStartOf="@+id/imageView17"
+        app:layout_constraintStart_toEndOf="@+id/imageView16"
+        app:layout_constraintTop_toBottomOf="@+id/textViewh3" />
 
     <ImageView
-        android:id="@+id/imageView12"
+        android:id="@+id/imageView18"
         android:layout_width="83dp"
         android:layout_height="90dp"
         android:layout_marginStart="24dp"
         android:layout_marginLeft="24dp"
         android:layout_marginTop="16dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView10"
+        app:layout_constraintTop_toBottomOf="@+id/imageView16"
         app:srcCompat="@drawable/windspeed2" />
 
     <ImageView
-        android:id="@+id/imageView13"
+        android:id="@+id/imageView19"
         android:layout_width="86dp"
         android:layout_height="90dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="24dp"
         android:layout_marginRight="24dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView11"
+        app:layout_constraintTop_toBottomOf="@+id/imageView17"
         app:srcCompat="@drawable/cloudcover" />
 
     <TextView
-        android:id="@+id/textViewws1"
+        android:id="@+id/textViewws3"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -222,12 +211,12 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:text="Wind Speed: "
-        app:layout_constraintEnd_toStartOf="@+id/imageView13"
-        app:layout_constraintStart_toEndOf="@+id/imageView12"
-        app:layout_constraintTop_toBottomOf="@+id/imageView10" />
+        app:layout_constraintEnd_toStartOf="@+id/imageView19"
+        app:layout_constraintStart_toEndOf="@+id/imageView18"
+        app:layout_constraintTop_toBottomOf="@+id/imageView16" />
 
     <TextView
-        android:id="@+id/textViewcc1"
+        android:id="@+id/textViewcc3"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -236,7 +225,8 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:text="Cloud Cover: "
-        app:layout_constraintEnd_toStartOf="@+id/imageView13"
-        app:layout_constraintStart_toEndOf="@+id/imageView12"
-        app:layout_constraintTop_toBottomOf="@+id/textViewws1" />
+        app:layout_constraintEnd_toStartOf="@+id/imageView19"
+        app:layout_constraintStart_toEndOf="@+id/imageView18"
+        app:layout_constraintTop_toBottomOf="@+id/textViewws3" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
