--- a/Shakti_Balaji/style.css
+++ b/Shakti_Balaji/style.css
@@ -9,15 +9,18 @@ body{
 }
 
 h1{
-    font-family: cursive;
+    font-family: cursive; 
     text-align: center;
+}
+
+h4{
+    font-family: cursive;
 }
 
 ul{
     list-style-type: none;
     padding-left: 0;
     margin-bottom: 3px;
-    background-color: darkslategray;
     width: 454px;
 }
 
@@ -39,14 +42,24 @@ li{
     opacity:1.3;
 }
 
-input{
-    width: 445.5px;
+.form{
+    width:215px;
     background-color: darkslategray;
     border: 2px inset gray;
-    padding-top: 0;
+    padding-top:0;
+    padding-bottom: 0;
     padding-left: 5px;
     padding-right: 0;
     color: white;
+    border-radius: 12px;
+    height: 20px;
+    outline: none;
+    -webkit-transition: width 0.3s ease-in-out;
+    transition: width 0.3s ease-in-out;
+}
+
+.form:hover{
+    width: 445.5px;
 }
 
 .nav{
@@ -58,7 +71,26 @@ input{
     background-color: darkslategray;
     color: white;
     border: 2px gray inset;
-    height: 23px;
+    height: 24px;
+    border-radius: 12px;
+    outline: none;
+}
+
+input{
+    background-color: darkslategray;
+    color: white;
+    border: 0;
+    width: 86%;
+    outline:none;
+    height: 12px;
+}
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+    transition: background-color 5000s ease-in-out 0s;
+    -webkit-text-fill-color: #fff !important;
 }
 
 .dropdown:hover{
@@ -87,11 +119,17 @@ input{
         background-color: initial;
         width: 100%;
     }
-    input,.dropdown{
+    .form,.dropdown{
         width: 100%;
         margin-top: 10px;
     }
+    .form{
+        width:98%;
+    }
+    .form:hover{
+        width:98%;
+    }
     input{
-        padding-left: 0;
+        width: 75%;
     }
 }
