--- a/Shouryan_Sharma/top ramen - Copy/style.css
+++ b/Shouryan_Sharma/top ramen - Copy/style.css
@@ -2,18 +2,7 @@
 	display:grid;
 	grid-template-columns: 1fr;
 }
-button{
-	background-color: rgb(255, 191, 73);
-	border:none;
-	color: white;
-	vertical-align: middle;
-	margin-left: 40%;
-	margin-top: 50px;
-	padding: 25px 80px;
-}
-button:hover{
-	background-color: rgb(245, 165, 61);
-}
+
 body{
 	margin: 0;
 	font-family: Arial, Helvetica, sans-serif;
@@ -100,6 +89,7 @@ body{
 	color: cornsilk; 
 	font-size: larger;
 	font-weight: 600;
+	position: relative;
 }
 .img-content .description{
 	transition: 1s;
@@ -143,7 +133,49 @@ p {
 	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 	box-shadow: burlywood;
 	border-radius: 20px;
+	border-color: teal;
+	border-width: 3px;
 }
 .text {
 	padding-left: 10px;
 }
+.sort {
+	background-color: bisque;
+	color: gray;
+	padding: 16px;
+	font-size: 16px;
+	border: none;
+	border-radius: 20px;
+	cursor: pointer;
+	margin-right: 2px;
+  }
+  
+  .sort:hover, .sort:focus {
+	background-color: burlywood;
+  }
+  
+  .drop {
+	position: relative;
+	display: inline-block;
+  }
+  
+  .dropdata {
+	display: none;
+	position: absolute;
+	background-color: #f1f1f1;
+	min-width: 160px;
+	overflow: auto;
+	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+	z-index: 1;
+  }
+  
+  .dropdata a {
+	color: black;
+	padding: 12px 16px;
+	text-decoration: none;
+	display: block;
+  }
+  
+  .drop a:hover {background-color: #ddd;}
+  
+  .show {display: block;}
