--- a/Shakti_Balaji/style.css
+++ b/Shakti_Balaji/style.css
@@ -35,11 +35,14 @@ li{
 }
 
 .sho{
-    opacity:0.8;
+    opacity:0.9;
+    padding-left: 10px;
 }
 
 .sho:hover{
     opacity:1.3;
+    border: 1.5px solid gray;
+    border-radius: 10px;
 }
 
 .form{
