--- a/Shouryan_Sharma/top ramen - Copy/style.css
+++ b/Shouryan_Sharma/top ramen - Copy/style.css
@@ -3,15 +3,21 @@
 	grid-template-columns: 1fr;
 }
 
-body{
-	margin: 0;
-	font-family: Arial, Helvetica, sans-serif;
+html,body
+{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
 }
 .navbar{
 	display: flex;
 	justify-content: space-between;
 	padding: 38px;
-	background-color: white
+	background-color: white;
+	max-width: 100%;
+	height: auto;
 }
 .left{
 	display: flex;
@@ -62,13 +68,14 @@ body{
 .items{
 	display: grid;
 	grid-template-columns: 1fr 1fr 1fr;
+	
 }
 .item {
 	position: relative;
 }
 .img-bg {
 	height: 300px;
-	width: 100%;
+	max-width: 100%;
 	background-size:cover;
 	background-position: center;
 	background-repeat: no-repeat;
@@ -95,6 +102,7 @@ body{
 	transition: 1s;
 	color: transparent;
 	font-weight: 600;
+	
 }
 .img-content:hover .description{
 	color: gold;
@@ -104,9 +112,8 @@ body{
 	filter: brightness(10%);
 }
 .description {
+	position: relative;
 	font-size: x-small;
-	padding-left: 100px;
-	padding-right: 100px;
 }
 p {
 	display: inline;
@@ -118,7 +125,7 @@ p {
 }
 .imag img{
 	height: 600px;
-	width: 100%;
+	max-width: 100%;
 }
 .heading {
 	font-family: Arial, Helvetica, sans-serif;
@@ -142,7 +149,8 @@ p {
 .sort {
 	background-color: bisque;
 	color: gray;
-	padding: 16px;
+	padding-right: 10px;
+	padding-left: 10px;
 	font-size: 16px;
 	border: none;
 	border-radius: 20px;
@@ -150,16 +158,16 @@ p {
 	margin-right: 2px;
   }
   
-  .sort:hover, .sort:focus {
+.sort:hover, .sort:focus {
 	background-color: burlywood;
   }
   
-  .drop {
+.drop {
 	position: relative;
 	display: inline-block;
   }
   
-  .dropdata {
+.dropdata {
 	display: none;
 	position: absolute;
 	background-color: #f1f1f1;
@@ -169,13 +177,13 @@ p {
 	z-index: 1;
   }
   
-  .dropdata a {
+.dropdata a {
 	color: black;
 	padding: 12px 16px;
 	text-decoration: none;
 	display: block;
   }
   
-  .drop a:hover {background-color: #ddd;}
+.drop a:hover {background-color: #ddd;}
   
-  .show {display: block;}
+.show {display: block;}
