--- a/Shouryan_Sharma/top ramen - Copy/style.css
+++ b/Shouryan_Sharma/top ramen - Copy/style.css
@@ -1,6 +1,7 @@
 .body {
 	display:grid;
 	grid-template-columns: 1fr;
+	font-family: Arial, Helvetica, sans-serif;
 }
 
 html,body
@@ -49,7 +50,7 @@ html,body
   border: 1px;
   margin-top: 8px;
   margin-right: 16px;
-  font-size: 17px;
+  font-size: 1.5vw;
   background-color: bisque;
 }
 .navbr .right button{
@@ -58,7 +59,7 @@ html,body
 	margin-top: 8px;
 	margin-right: 16px;
 	background: #ddd;
-	font-size: 17px;
+	font-size: 1.5vw;
 	border: none;
 	cursor: pointer;
 }
@@ -84,24 +85,28 @@ html,body
 	position: absolute;
 	top: 0;
 	display: flex;
-	flex-direction: column;
-	justify-content: center;
 	align-items: center;
-	padding-left: 100px;
-	padding-right: 100px;
-	padding-top: 100px;
+	flex-direction: column;
+	align-content: center;
+	justify-content: center;
+	padding-top: 2%;
+
 
 }
 .name {
+	margin-top: 0vw;
+	padding-left: 40%;
+	padding-right: 40%;
 	color: cornsilk; 
-	font-size: larger;
-	font-weight: 600;
-	position: relative;
+	font-size: 1.2vw;
+	font-weight: 650;
+	position: absolute;
+	top: 4vw;
 }
 .img-content .description{
 	transition: 1s;
 	color: transparent;
-	font-weight: 600;
+	font-weight: 650;
 	
 }
 .img-content:hover .description{
@@ -112,8 +117,8 @@ html,body
 	filter: brightness(10%);
 }
 .description {
-	position: relative;
-	font-size: x-small;
+	font-size: 0.8vw;
+	padding: 7vw;
 }
 p {
 	display: inline;
@@ -121,7 +126,7 @@ p {
 }
 .section {
 	display: grid;
-	grid-template-columns: 1fr 1fr;
+	grid-template-columns: 2fr 2fr;
 }
 .imag img{
 	height: 600px;
@@ -144,14 +149,14 @@ p {
 	border-width: 3px;
 }
 .text {
-	padding-left: 10px;
+	margin-left: 2px;
 }
 .sort {
 	background-color: bisque;
 	color: gray;
 	padding-right: 10px;
 	padding-left: 10px;
-	font-size: 16px;
+	font-size: 1vw;
 	border: none;
 	border-radius: 20px;
 	cursor: pointer;
